# cadmium-yellow

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  treefmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: lines.json  update.sh
examples/: list_lines.rs  list_platforms.rs  list_station_names.rs  list_stations.rs  list_stations_from_api.rs  list_trains.rs
src/: client.rs  error.rs  lib.rs
src/types/: line.rs  mod.rs  platform.rs  station.rs  train.rs
