[package]
name = "cadmium-yellow"
version = "2024.3.2"

description = "A client library for the unofficial Nexus Tyne and Wear Metro real time information API"
readme = "README.md"

homepage = "https://github.com/DanNixon/cadmium-yellow"
repository = "https://github.com/DanNixon/cadmium-yellow"

license = "MIT"

categories = ["api-bindings"]
keywords = ["real-time-information", "nexus", "tyne-and-wear-metro", "api", "api-client"]

edition = "2024"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
lazy_static = "1.4.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.13.1", features = ["blocking"] }
